# jpaste2

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  cargo_out.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ts_out.txt  tsconfig.json  vite.config.ts
.codebuddy/memory/: 2026-07-03.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-16.md  2026-07-17.md  2026-07-22.md
.codebuddy/plans/: jpaste-aggregator-dev_e6785c2e.md  share-server-implementation_f0fdcad7.md
.github/workflows/: release.yml
docs/: CONTEXT.md  checklist.md  feature-review-rust-egui.md  fluent-migration-plan.md  prd-aggregator.md  ui-ux-checklist.md  技术方案.md
docs/adr/: 0001-unified-global-shortcut-registry.md  0002-share-server-axum.md
src/: app.rs  app.tsx  lib.rs  main.rs  main.tsx  ops.rs
src-tauri/: Cargo.toml  cargo_err.txt  tauri.conf.json  test_out.txt
src-tauri/capabilities/: default.json  webview.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  clipboard.rs  lib.rs  log_service.rs  main.rs  model.rs  net.rs  qrcode.rs  repository.rs  tests.rs  toast.rs  util.rs
src-tauri/src/clipboard/: pipeline.rs
src-tauri/src/command/: clipboard.rs  curl.rs  filostack.rs  history.rs  image_export.rs  mod.rs  quicklaunch.rs  settings.rs  share_server.rs  system.rs  toolbox.rs  viewer.rs
src-tauri/src/monitor/: hook.rs  mod.rs
src-tauri/src/repository/: entries.rs  favorites.rs  maintenance.rs  mod.rs  tests.rs
src-tauri/src/service/: fileop.rs  filostack.rs  history.rs  image.rs  mod.rs  settings.rs
src-tauri/src/share-client/: client.js  styles.css  template.html
src/actions/: curl.ts  decoder.ts  folder.tsx  index.ts  json.ts  math.tsx  open-url.tsx  qrcode.ts  registry.test.ts  registry.ts  timestamp.ts  viewer-action.ts  ws.ts
src/clipboard/: capture.rs  mod.rs  service.rs  source.rs  watcher.rs
src/components/: action-module-list.test.tsx  action-module-list.tsx  fluent-icon.tsx  hotkey-editor.tsx  modal.tsx  queue-popup.tsx  shortcut-help.tsx  toggle-switch.tsx
src/features/calc/: action.ts  index.tsx
src/features/curl/: action.ts  index.tsx
src/filostack/: hook.rs  mod.rs  service.rs  strategy.rs
src/hooks/: use-entries.test.ts  use-entries.ts  use-entry-id.ts  use-events.ts  use-filo-status.ts  use-hash-path-location.ts  use-json-editor.ts  use-keyboard.ts  use-main-shortcuts.ts  use-sidebar-tabs.ts  use-viewer-entry.ts
src/lib/: clipboard.ts  curl-codegen.ts  events.ts  format.ts  invoke.ts  logger.ts  math.ts  types.ts
src/routes/: toast.metadata.test.ts  toast.tsx
src/settings/: mod.rs  types.rs
src/storage/: db.rs  image_store.rs  mod.rs  repository.rs
src/styles/: app.css  base.css  global.css  modals.css  settings.css  toast.css  viewers.css
src/types/: jsoneditor.d.ts
src/ui/: entry_item.rs  entry_list.rs  filo_bar.rs  mod.rs  search_bar.rs  settings_page.rs  shortcut_help.rs  tab_bar.rs  theme.rs  toast.rs
src/util/: hash.rs  mod.rs  text.rs  tracker.rs
tests/: clipboard_pipeline.rs  filostack_tests.rs  image_store_tests.rs  operations_tests.rs  settings_tests.rs  storage_tests.rs
tests/common/: mod.rs
(+32 files in other folders)
