[package]
name = "jpastev2"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
egui = "0.35"
egui-winit = "0.35"
egui-wgpu = { version = "0.35", features = ["winit"] }
wgpu = "24"
pollster = "0.4"
winit = "0.30"

# Clipboard
clipboard-rs = "0.3.5"

# Storage
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# Image
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg"] }

# System tray
tray-icon = "0.24"

# Global hotkey
global-hotkey = "0.8"

# Win32 APIs (source tracking, autostart, single instance)
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Graphics_Gdi",
] }

# Hashing
sha2 = "0.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Cross-thread communication
crossbeam-channel = "0.5"

# File opening (editor / explorer)
open = "5"

[dev-dependencies]
tempfile = "3"
