[package]
name = "jpaste2"
version = "0.1.0"
description = "jPaste v2 - Windows clipboard manager with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "jpaste2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clipboard-rs = { version = "0.3.5", features = ["image"] }
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", features = ["webp"] }
log = "0.4"
chrono = "0.4"
once_cell = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
regex = "1"
url = { version = "2", features = [] }
rxing = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 256
panic = "abort"
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
# ponytail: diagnostics — keep symbols + line tables so panic backtraces
# resolve to function names/file:line. Flip back to `strip = true` (and drop
# `debug`) once the auto-exit root cause is found to shrink the final binary.
strip = false
debug = 1

#opt-level = 0
#debug = 1
#codegen-units = 256
#panic = "abort"
